--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,9 +43,14 @@ jobs:
     #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
     #   with:
     #     gradle-version: '8.9'
-    
+    - name: Install pre requiriments
+      run: sudo apt install sips tree
     - name: Build with Gradle 8.9
       run: ls out/production/Microcraft/
+    - name: View all repo
+      run: tree .
+    - name: loking for jar
+      run: find . -name *MICROCRAFT*.jar
 
   dependency-submission:
 
