--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,9 +33,21 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
+    - name: Install pre requiriments
+      run: sudo apt-get update && sudo apt-get install imagemagick tree
+      
     - name: Build with Gradle Wrapper
       run: ./package.sh
-
+      
+    - name: Show production folder
+      run: ls out/production/Microcraft/
+      
+    - name: View all repo
+      run: tree .
+      
+    - name: loking for jar
+      run: find . -name *MICROCRAFT*.jar
+      
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
@@ -43,14 +55,6 @@ jobs:
     #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
     #   with:
     #     gradle-version: '8.9'
-    - name: Install pre requiriments
-      run: sudo apt install sips tree
-    - name: Build with Gradle 8.9
-      run: ls out/production/Microcraft/
-    - name: View all repo
-      run: tree .
-    - name: loking for jar
-      run: find . -name *MICROCRAFT*.jar
 
   dependency-submission:
 
