--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,29 +48,16 @@ jobs:
     - name: loking for jar
       run: find . -name *MICROCRAFT*.jar
       
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-
-  dependency-submission:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    # - name: Upload production build
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: Microcraft_build
+    #     path: out/artifacts/Microcraft_jar/Microcraft.jar
+        
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v5.0.0
       with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+        # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
+        name: Microcraft
+        path: out/artifacts/Microcraft_jar/Microcraft.jar
+          
