--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-    - name: Install pre requiriments
-      run: sudo apt-get update && sudo apt-get install imagemagick tree
+    # - name: Install pre requiriments
+    #   run: sudo apt-get update && sudo apt-get install imagemagick tree
       
     - name: Build with Gradle Wrapper
       run: ./package.sh
@@ -52,6 +52,6 @@ jobs:
       uses: actions/download-artifact@v5.0.0
       with:
         # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
-        name: Microcraft
+        name: Microcraft.jar
         path: out/artifacts/Microcraft_jar/Microcraft.jar
           
