--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,8 +30,8 @@ jobs:
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+    # - name: Setup Gradle
+    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
     # - name: Install pre requiriments
     #   run: sudo apt-get update && sudo apt-get install imagemagick tree
@@ -53,9 +53,9 @@ jobs:
         name: Microcraft.jar
         path: out/artifacts/Microcraft_jar/Microcraft.jar
         
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v5.0.0
-      with:
-        # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
-        name: Microcraft.jar
-        path: out/artifacts/Microcraft_jar/Microcraft.jar
+    # - name: Download a Build Artifact
+    #   uses: actions/download-artifact@v5.0.0
+    #   with:
+    #     # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
+    #     name: Microcraft.jar
+    #     path: out/artifacts/Microcraft_jar/Microcraft.jar
