--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,6 +53,19 @@ jobs:
         name: Microcraft.jar
         path: out/artifacts/Microcraft_jar/Microcraft.jar
         
+    - name: Github Release
+      # You may pin to the exact commit or the version.
+      # uses: elgohr/Github-Release-Action@c5ea99036abb741a89f8bf1f2cd7fba845e3313a
+      uses: elgohr/Github-Release-Action@v5
+      with:
+        # The name of the release to publish
+        title: Microcraft
+        # Directory of the repository that the should create the release
+        workdir: out/artifacts/Microcraft_jar/
+        # The tag of the release to publish
+        tag: v0.0.1
+        # Publishes a prerelease
+        prerelease: true
     # - name: Download a Build Artifact
     #   uses: actions/download-artifact@v5.0.0
     #   with:
